parser.output
Nonterminals useless in grammar

   array_of_objects_declaration
   array_of_objects
   objects
   nested_bracket_on_object


Terminals unused in grammar

   SINGLE_QUOTE
   DOUBLE_QUOTE
   PROMISE
   CLASS_IDENTIFIER


Rules useless in grammar

  243 array_of_objects_declaration: variable_types IDENTIFIER COLON ANY LBRACKET RBRACKET ASSIGN array_of_objects SEMICOLON

  244 array_of_objects: LBRACKET objects RBRACKET

  245 objects: LBRACE object_attribution RBRACE COMMA objects
  246        | LBRACE object_attribution RBRACE

  247 nested_bracket_on_object: access_object_nested
  248                         | %empty


Rules useless in parser due to conflicts

   14 variable_types: CONST


State 2 conflicts: 1 shift/reduce
State 90 conflicts: 4 shift/reduce
State 135 conflicts: 4 shift/reduce
State 137 conflicts: 4 shift/reduce
State 160 conflicts: 11 shift/reduce
State 207 conflicts: 11 shift/reduce
State 208 conflicts: 11 shift/reduce
State 210 conflicts: 11 shift/reduce
State 212 conflicts: 11 shift/reduce
State 213 conflicts: 11 shift/reduce
State 214 conflicts: 11 shift/reduce
State 215 conflicts: 11 shift/reduce
State 216 conflicts: 11 shift/reduce
State 218 conflicts: 11 shift/reduce
State 220 conflicts: 11 shift/reduce
State 265 conflicts: 11 shift/reduce
State 266 conflicts: 11 shift/reduce
State 267 conflicts: 11 shift/reduce
State 268 conflicts: 11 shift/reduce


Grammar

    0 $accept: program $end

    1 program: commands

    2 $@1: %empty

    3 declaration: variable_types IDENTIFIER $@1 COLON possible_declarations
    4            | console_log_declarations
    5            | increment_decrement_variable
    6            | set_value_on_class
    7            | instance_new_class

    8 possible_declarations: number_declaration
    9                      | string_declaration
   10                      | boolean_declaration
   11                      | object_declaration

   12 variable_types: LET
   13               | VAR
   14               | CONST

   15 $@2: %empty

   16 console_log_declarations: console_log_left_common STRING_LITERAL $@2 console_log_declaration_with_add console_log_right_common
   17                         | console_log_left_common access_object console_log_declaration_with_add console_log_right_common

   18 console_log_left_common: CONSOLE_LOG LPARENTHESES

   19 console_log_right_common: RPARENTHESES SEMICOLON

   20 $@3: %empty

   21 console_log_declaration_with_add: ADD $@3 expressions console_log_right_common
   22                                 | %empty

   23 all_possible_variables: NUMBER_LITERAL
   24                       | FLOAT_LITERAL
   25                       | BOOLEAN_LITERAL
   26                       | STRING_LITERAL
   27                       | array_of_strings
   28                       | array_of_numbers_only_values
   29                       | array_of_floats_only_values
   30                       | array_of_booleans

   31 all_possible_variables_types: NUMBER
   32                             | STRING
   33                             | BOOLEAN
   34                             | ANY
   35                             | VOID

   36 $@4: %empty

   37 instance_new_class: CONST IDENTIFIER ASSIGN NEW ERROR_LITERAL LPARENTHESES $@4 function_values RPARENTHESES SEMICOLON

   38 number_declaration: NUMBER number_or_array_declaration

   39 number_or_array_declaration: LBRACKET RBRACKET ASSIGN array_of_numbers_and_floats_declaration SEMICOLON
   40                            | ASSIGN number_or_float_declaration SEMICOLON

   41 number_or_float_declaration: NUMBER_LITERAL
   42                            | FLOAT_LITERAL

   43 array_of_numbers_and_floats_declaration: array_of_numbers
   44                                        | array_of_floats

   45 string_declaration: STRING string_or_array_of_strings_declaration SEMICOLON

   46 string_or_array_of_strings_declaration: ASSIGN STRING_LITERAL

   47 $@5: %empty

   48 string_or_array_of_strings_declaration: LBRACKET RBRACKET ASSIGN $@5 array_of_strings

   49 boolean_declaration: BOOLEAN boolean_or_array_of_booleans_declaration SEMICOLON

   50 boolean_or_array_of_booleans_declaration: ASSIGN BOOLEAN_LITERAL

   51 $@6: %empty

   52 boolean_or_array_of_booleans_declaration: LBRACKET RBRACKET ASSIGN $@6 array_of_booleans

   53 $@7: %empty

   54 object_declaration: ANY ASSIGN LBRACE $@7 object_attribution RBRACE SEMICOLON

   55 $@8: %empty

   56 object_declaration: ERROR_LITERAL ASSIGN LBRACE $@8 object_attribution RBRACE SEMICOLON

   57 object_attribution: IDENTIFIER COLON STRING_LITERAL
   58                   | IDENTIFIER COLON NUMBER_LITERAL
   59                   | IDENTIFIER COLON FLOAT_LITERAL
   60                   | IDENTIFIER COLON BOOLEAN_LITERAL
   61                   | IDENTIFIER COLON access_object

   62 $@9: %empty

   63 object_attribution: IDENTIFIER COLON STRING_LITERAL COMMA $@9 object_attribution

   64 $@10: %empty

   65 object_attribution: IDENTIFIER COLON NUMBER_LITERAL COMMA $@10 object_attribution

   66 $@11: %empty

   67 object_attribution: IDENTIFIER COLON FLOAT_LITERAL COMMA $@11 object_attribution

   68 $@12: %empty

   69 object_attribution: IDENTIFIER COLON BOOLEAN_LITERAL COMMA $@12 object_attribution
   70                   | IDENTIFIER COLON access_object COMMA object_attribution
   71                   | IDENTIFIER COLON LBRACE object_attribution RBRACE
   72                   | %empty

   73 $@13: %empty

   74 array_of_numbers: LBRACKET $@13 numbers RBRACKET

   75 $@14: %empty

   76 array_of_numbers_only_values: LBRACKET $@14 numbers RBRACKET

   77 $@15: %empty

   78 numbers: NUMBER_LITERAL COMMA $@15 numbers
   79        | NUMBER_LITERAL

   80 $@16: %empty

   81 array_of_floats: LBRACKET $@16 floats RBRACKET

   82 $@17: %empty

   83 array_of_floats_only_values: LBRACKET $@17 floats RBRACKET

   84 $@18: %empty

   85 floats: FLOAT_LITERAL COMMA $@18 floats
   86       | FLOAT_LITERAL

   87 $@19: %empty

   88 array_of_booleans: LBRACKET $@19 booleans RBRACKET

   89 $@20: %empty

   90 booleans: BOOLEAN_LITERAL COMMA $@20 booleans
   91         | BOOLEAN_LITERAL

   92 $@21: %empty

   93 array_of_strings: LBRACKET $@21 strings RBRACKET

   94 $@22: %empty

   95 strings: STRING_LITERAL COMMA $@22 strings
   96        | STRING_LITERAL

   97 increment_decrement_variable: IDENTIFIER ADD ADD SEMICOLON
   98                             | IDENTIFIER MINUS MINUS SEMICOLON

   99 access_object: IDENTIFIER

  100 $@23: %empty

  101 access_object: IDENTIFIER DOT $@23 access_object
  102              | access_object_on_bracket

  103 $@24: %empty

  104 access_object_on_bracket: IDENTIFIER LBRACKET STRING_LITERAL RBRACKET $@24 acess_more_objects_on_bracket

  105 acess_more_objects_on_bracket: access_object_nested
  106                              | %empty

  107 access_object_nested: access_identifier_on_object_nested
  108                     | access_bracket_on_object_nested

  109 $@25: %empty

  110 access_identifier_on_object_nested: DOT IDENTIFIER $@25 nested_dot_identifier_on_object

  111 $@26: %empty

  112 nested_dot_identifier_on_object: DOT $@26 access_object
  113                                | %empty

  114 access_bracket_on_object_nested: LBRACKET STRING_LITERAL RBRACKET

  115 $@27: %empty

  116 cases_of_switch_case: CASE NUMBER_LITERAL COLON RETURN $@27 returns_of_switch

  117 $@28: %empty

  118 cases_of_switch_case: CASE STRING_LITERAL COLON RETURN $@28 returns_of_switch

  119 $@29: %empty

  120 cases_of_switch_case: CASE BOOLEAN_LITERAL COLON RETURN $@29 returns_of_switch

  121 $@30: %empty

  122 $@31: %empty

  123 cases_of_switch_case: CASE $@30 access_object COLON RETURN $@31 returns_of_switch
  124                     | %empty

  125 $@32: %empty

  126 returns_of_switch: all_possible_variables SEMICOLON $@32 cases_of_switch_case

  127 $@33: %empty

  128 default_case_of_switch_case: DEFAULT COLON RETURN $@33 all_possible_variables SEMICOLON

  129 set_value_on_class: THIS DOT IDENTIFIER ASSIGN IDENTIFIER SEMICOLON

  130 commands: command commands
  131         | declaration commands
  132         | %empty

  133 command: if_declaration

  134 $@34: %empty

  135 $@35: %empty

  136 command: WHILE LPARENTHESES $@34 expressions RPARENTHESES LBRACE $@35 commands RBRACE

  137 $@36: %empty

  138 $@37: %empty

  139 command: DO LBRACE $@36 commands RBRACE WHILE LPARENTHESES $@37 expressions RPARENTHESES SEMICOLON

  140 $@38: %empty

  141 command: THROW NEW ERROR_LITERAL LPARENTHESES $@38 expressions RPARENTHESES SEMICOLON
  142        | try_finally_declaration

  143 $@39: %empty

  144 $@40: %empty

  145 command: SWITCH LPARENTHESES $@39 expressions RPARENTHESES LBRACE $@40 cases_of_switch_case default_case_of_switch_case RBRACE
  146        | function_declarartion
  147        | call_a_function

  148 $@41: %empty

  149 command: RETURN $@41 expressions SEMICOLON
  150        | class_declarations

  151 $@42: %empty

  152 $@43: %empty

  153 $@44: %empty

  154 if_declaration: IF LPARENTHESES $@42 expressions RPARENTHESES LBRACE $@43 commands RBRACE $@44 else_declaration

  155 $@45: %empty

  156 else_declaration: ELSE LBRACE $@45 commands RBRACE
  157                 | %empty

  158 $@46: %empty

  159 $@47: %empty

  160 $@48: %empty

  161 try_finally_declaration: TRY LBRACE $@46 commands RBRACE $@47 catch_declararation FINALLY LBRACE $@48 commands RBRACE

  162 $@49: %empty

  163 $@50: %empty

  164 catch_declararation: CATCH LPARENTHESES $@49 catch_error RPARENTHESES LBRACE $@50 commands RBRACE
  165                    | %empty

  166 catch_error: IDENTIFIER error_to_catch

  167 error_to_catch: COLON ERROR_LITERAL
  168               | INSTANCEOF ERROR_LITERAL

  169 expressions: STRING_LITERAL
  170            | NUMBER_LITERAL
  171            | FLOAT_LITERAL
  172            | BOOLEAN_LITERAL
  173            | access_object

  174 $@51: %empty

  175 expressions: expressions '<' $@51 expressions

  176 $@52: %empty

  177 expressions: expressions '<' ASSIGN $@52 expressions
  178            | expressions assign_expression expressions

  179 $@53: %empty

  180 expressions: expressions '>' $@53 expressions

  181 $@54: %empty

  182 expressions: expressions '>' ASSIGN $@54 expressions

  183 $@55: %empty

  184 expressions: expressions ADD $@55 expressions

  185 $@56: %empty

  186 expressions: expressions MINUS $@56 expressions

  187 $@57: %empty

  188 expressions: expressions '*' $@57 expressions

  189 $@58: %empty

  190 expressions: expressions '/' $@58 expressions

  191 $@59: %empty

  192 expressions: expressions '^' $@59 expressions

  193 $@60: %empty

  194 expressions: expressions '%' $@60 expressions

  195 $@61: %empty

  196 expressions: expressions '|' $@61 expressions

  197 $@62: %empty

  198 expressions: expressions '|' '|' $@62 expressions

  199 $@63: %empty

  200 expressions: expressions '&' $@63 expressions

  201 $@64: %empty

  202 expressions: expressions '&' '&' $@64 expressions

  203 $@65: %empty

  204 expressions: LPARENTHESES $@65 expressions RPARENTHESES

  205 assign_expression: ASSIGN ASSIGN compare_type_and_value_expressions

  206 compare_type_and_value_expressions: ASSIGN
  207                                   | %empty

  208 function_declarartion: FUNCTION IDENTIFIER LPARENTHESES function_parameters RPARENTHESES COLON all_possible_variables_types LBRACE commands RBRACE

  209 call_a_function: IDENTIFIER LPARENTHESES all_possible_variables RPARENTHESES SEMICOLON
  210                | IDENTIFIER LPARENTHESES all_possible_variables COMMA function_values RPARENTHESES SEMICOLON

  211 function_values: all_possible_variables
  212                | all_possible_variables COMMA function_values

  213 function_parameters: %empty

  214 $@66: %empty

  215 function_parameters: IDENTIFIER COLON all_possible_variables_types $@66 function_parameters_one_or_more

  216 $@67: %empty

  217 function_parameters_one_or_more: COMMA $@67 function_parameters
  218                                | %empty

  219 $@68: %empty

  220 class_declarations: CLASS ERROR_LITERAL LBRACE $@68 class_attributes constructor_definition class_attributes RBRACE

  221 class_attributes: class_attribute_declaration class_attributes
  222                 | class_function_declarartion class_attributes
  223                 | %empty

  224 $@69: %empty

  225 class_attribute_declaration: access_modifiers IDENTIFIER COLON all_possible_variables_types $@69 initialize_class_attribute_value SEMICOLON

  226 $@70: %empty

  227 class_attribute_declaration: IDENTIFIER COLON all_possible_variables_types $@70 initialize_class_attribute_value SEMICOLON

  228 initialize_class_attribute_value: ASSIGN all_possible_variables
  229                                 | %empty

  230 access_modifiers: PUBLIC
  231                 | PRIVATE
  232                 | PROTECTED

  233 $@71: %empty

  234 $@72: %empty

  235 constructor_definition: CONSTRUCTOR LPARENTHESES $@71 function_parameters RPARENTHESES LBRACE $@72 set_property_with_this RBRACE
  236                       | %empty

  237 $@73: %empty

  238 set_property_with_this: THIS DOT IDENTIFIER ASSIGN IDENTIFIER SEMICOLON $@73 set_property_with_this
  239                       | %empty

  240 $@74: %empty

  241 $@75: %empty

  242 class_function_declarartion: IDENTIFIER LPARENTHESES $@74 function_parameters RPARENTHESES COLON all_possible_variables_types LBRACE $@75 commands RBRACE


Terminals, with rules where they appear

$end (0) 0
'%' (37) 194
'&' (38) 200 202
'*' (42) 188
'/' (47) 190
'<' (60) 175 177
'>' (62) 180 182
'^' (94) 192
'|' (124) 196 198
error (256)
VAR (258) 13
CONST (259) 14 37
CLASS (260) 220
CONSTRUCTOR (261) 235
PRIVATE (262) 231
PUBLIC (263) 230
PROTECTED (264) 232
NUMBER (265) 31 38
VOID (266) 35
STRING (267) 32 45
BOOLEAN (268) 33 49
ANY (269) 34 54
CONSOLE_LOG (270) 18
LBRACKET (271) 39 48 52 74 76 81 83 88 93 104 114
RBRACKET (272) 39 48 52 74 76 81 83 88 93 104 114
LBRACE (273) 54 56 71 136 139 145 154 156 161 164 208 220 235 242
RBRACE (274) 54 56 71 136 139 145 154 156 161 164 208 220 235 242
SINGLE_QUOTE (275)
DOUBLE_QUOTE (276)
COMMA (277) 63 65 67 69 70 78 85 90 95 210 212 217
LPARENTHESES (278) 18 37 136 139 141 145 154 164 204 208 209 210 235
    242
RPARENTHESES (279) 19 37 136 139 141 145 154 164 204 208 209 210 235
    242
IF (280) 154
ELSE (281) 156
WHILE (282) 136 139
DO (283) 139
DOT (284) 101 110 112 129 238
TRY (285) 161
CATCH (286) 164
FINALLY (287) 161
SWITCH (288) 145
CASE (289) 116 118 120 123
THROW (290) 141
NEW (291) 37 141
RETURN (292) 116 118 120 123 128 149
DEFAULT (293) 128
THIS (294) 129 238
FUNCTION (295) 208
PROMISE (296)
INSTANCEOF (297) 168
COLON (298) 3 57 58 59 60 61 63 65 67 69 70 71 116 118 120 123 128
    167 208 215 225 227 242
SEMICOLON (299) 19 37 39 40 45 49 54 56 97 98 126 128 129 139 141 149
    209 210 225 227 238
ASSIGN (300) 37 39 40 46 48 50 52 54 56 129 177 182 205 206 228 238
ADD (301) 21 97 184
MINUS (302) 98 186
IDENTIFIER (303) 3 37 57 58 59 60 61 63 65 67 69 70 71 97 98 99 101
    104 110 129 166 208 209 210 215 225 227 238 242
CLASS_IDENTIFIER (304)
LET (305) 12
STRING_LITERAL (306) 16 26 46 57 63 95 96 104 114 118 169
NUMBER_LITERAL (307) 23 41 58 65 78 79 116 170
FLOAT_LITERAL (308) 24 42 59 67 85 86 171
BOOLEAN_LITERAL (309) 25 50 60 69 90 91 120 172
ERROR_LITERAL (310) 37 56 141 167 168 220


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
declaration (66)
    on left: 3 4 5 6 7, on right: 131
$@1 (67)
    on left: 2, on right: 3
possible_declarations (68)
    on left: 8 9 10 11, on right: 3
variable_types (69)
    on left: 12 13 14, on right: 3
console_log_declarations (70)
    on left: 16 17, on right: 4
$@2 (71)
    on left: 15, on right: 16
console_log_left_common (72)
    on left: 18, on right: 16 17
console_log_right_common (73)
    on left: 19, on right: 16 17 21
console_log_declaration_with_add (74)
    on left: 21 22, on right: 16 17
$@3 (75)
    on left: 20, on right: 21
all_possible_variables (76)
    on left: 23 24 25 26 27 28 29 30, on right: 126 128 209 210 211
    212 228
all_possible_variables_types (77)
    on left: 31 32 33 34 35, on right: 208 215 225 227 242
instance_new_class (78)
    on left: 37, on right: 7
$@4 (79)
    on left: 36, on right: 37
number_declaration (80)
    on left: 38, on right: 8
number_or_array_declaration (81)
    on left: 39 40, on right: 38
number_or_float_declaration (82)
    on left: 41 42, on right: 40
array_of_numbers_and_floats_declaration (83)
    on left: 43 44, on right: 39
string_declaration (84)
    on left: 45, on right: 9
string_or_array_of_strings_declaration (85)
    on left: 46 48, on right: 45
$@5 (86)
    on left: 47, on right: 48
boolean_declaration (87)
    on left: 49, on right: 10
boolean_or_array_of_booleans_declaration (88)
    on left: 50 52, on right: 49
$@6 (89)
    on left: 51, on right: 52
object_declaration (90)
    on left: 54 56, on right: 11
$@7 (91)
    on left: 53, on right: 54
$@8 (92)
    on left: 55, on right: 56
object_attribution (93)
    on left: 57 58 59 60 61 63 65 67 69 70 71 72, on right: 54 56 63
    65 67 69 70 71
$@9 (94)
    on left: 62, on right: 63
$@10 (95)
    on left: 64, on right: 65
$@11 (96)
    on left: 66, on right: 67
$@12 (97)
    on left: 68, on right: 69
array_of_numbers (98)
    on left: 74, on right: 43
$@13 (99)
    on left: 73, on right: 74
array_of_numbers_only_values (100)
    on left: 76, on right: 28
$@14 (101)
    on left: 75, on right: 76
numbers (102)
    on left: 78 79, on right: 74 76 78
$@15 (103)
    on left: 77, on right: 78
array_of_floats (104)
    on left: 81, on right: 44
$@16 (105)
    on left: 80, on right: 81
array_of_floats_only_values (106)
    on left: 83, on right: 29
$@17 (107)
    on left: 82, on right: 83
floats (108)
    on left: 85 86, on right: 81 83 85
$@18 (109)
    on left: 84, on right: 85
array_of_booleans (110)
    on left: 88, on right: 30 52
$@19 (111)
    on left: 87, on right: 88
booleans (112)
    on left: 90 91, on right: 88 90
$@20 (113)
    on left: 89, on right: 90
array_of_strings (114)
    on left: 93, on right: 27 48
$@21 (115)
    on left: 92, on right: 93
strings (116)
    on left: 95 96, on right: 93 95
$@22 (117)
    on left: 94, on right: 95
increment_decrement_variable (118)
    on left: 97 98, on right: 5
access_object (119)
    on left: 99 101 102, on right: 17 61 70 101 112 123 173
$@23 (120)
    on left: 100, on right: 101
access_object_on_bracket (121)
    on left: 104, on right: 102
$@24 (122)
    on left: 103, on right: 104
acess_more_objects_on_bracket (123)
    on left: 105 106, on right: 104
access_object_nested (124)
    on left: 107 108, on right: 105
access_identifier_on_object_nested (125)
    on left: 110, on right: 107
$@25 (126)
    on left: 109, on right: 110
nested_dot_identifier_on_object (127)
    on left: 112 113, on right: 110
$@26 (128)
    on left: 111, on right: 112
access_bracket_on_object_nested (129)
    on left: 114, on right: 108
cases_of_switch_case (130)
    on left: 116 118 120 123 124, on right: 126 145
$@27 (131)
    on left: 115, on right: 116
$@28 (132)
    on left: 117, on right: 118
$@29 (133)
    on left: 119, on right: 120
$@30 (134)
    on left: 121, on right: 123
$@31 (135)
    on left: 122, on right: 123
returns_of_switch (136)
    on left: 126, on right: 116 118 120 123
$@32 (137)
    on left: 125, on right: 126
default_case_of_switch_case (138)
    on left: 128, on right: 145
$@33 (139)
    on left: 127, on right: 128
set_value_on_class (140)
    on left: 129, on right: 6
commands (141)
    on left: 130 131 132, on right: 1 130 131 136 139 154 156 161 164
    208 242
command (142)
    on left: 133 136 139 141 142 145 146 147 149 150, on right: 130
$@34 (143)
    on left: 134, on right: 136
$@35 (144)
    on left: 135, on right: 136
$@36 (145)
    on left: 137, on right: 139
$@37 (146)
    on left: 138, on right: 139
$@38 (147)
    on left: 140, on right: 141
$@39 (148)
    on left: 143, on right: 145
$@40 (149)
    on left: 144, on right: 145
$@41 (150)
    on left: 148, on right: 149
if_declaration (151)
    on left: 154, on right: 133
$@42 (152)
    on left: 151, on right: 154
$@43 (153)
    on left: 152, on right: 154
$@44 (154)
    on left: 153, on right: 154
else_declaration (155)
    on left: 156 157, on right: 154
$@45 (156)
    on left: 155, on right: 156
try_finally_declaration (157)
    on left: 161, on right: 142
$@46 (158)
    on left: 158, on right: 161
$@47 (159)
    on left: 159, on right: 161
$@48 (160)
    on left: 160, on right: 161
catch_declararation (161)
    on left: 164 165, on right: 161
$@49 (162)
    on left: 162, on right: 164
$@50 (163)
    on left: 163, on right: 164
catch_error (164)
    on left: 166, on right: 164
error_to_catch (165)
    on left: 167 168, on right: 166
expressions (166)
    on left: 169 170 171 172 173 175 177 178 180 182 184 186 188 190
    192 194 196 198 200 202 204, on right: 21 136 139 141 145 149 154
    175 177 178 180 182 184 186 188 190 192 194 196 198 200 202 204
$@51 (167)
    on left: 174, on right: 175
$@52 (168)
    on left: 176, on right: 177
$@53 (169)
    on left: 179, on right: 180
$@54 (170)
    on left: 181, on right: 182
$@55 (171)
    on left: 183, on right: 184
$@56 (172)
    on left: 185, on right: 186
$@57 (173)
    on left: 187, on right: 188
$@58 (174)
    on left: 189, on right: 190
$@59 (175)
    on left: 191, on right: 192
$@60 (176)
    on left: 193, on right: 194
$@61 (177)
    on left: 195, on right: 196
$@62 (178)
    on left: 197, on right: 198
$@63 (179)
    on left: 199, on right: 200
$@64 (180)
    on left: 201, on right: 202
$@65 (181)
    on left: 203, on right: 204
assign_expression (182)
    on left: 205, on right: 178
compare_type_and_value_expressions (183)
    on left: 206 207, on right: 205
function_declarartion (184)
    on left: 208, on right: 146
call_a_function (185)
    on left: 209 210, on right: 147
function_values (186)
    on left: 211 212, on right: 37 210 212
function_parameters (187)
    on left: 213 215, on right: 208 217 235 242
$@66 (188)
    on left: 214, on right: 215
function_parameters_one_or_more (189)
    on left: 217 218, on right: 215
$@67 (190)
    on left: 216, on right: 217
class_declarations (191)
    on left: 220, on right: 150
$@68 (192)
    on left: 219, on right: 220
class_attributes (193)
    on left: 221 222 223, on right: 220 221 222
class_attribute_declaration (194)
    on left: 225 227, on right: 221
$@69 (195)
    on left: 224, on right: 225
$@70 (196)
    on left: 226, on right: 227
initialize_class_attribute_value (197)
    on left: 228 229, on right: 225 227
access_modifiers (198)
    on left: 230 231 232, on right: 225
constructor_definition (199)
    on left: 235 236, on right: 220
$@71 (200)
    on left: 233, on right: 235
$@72 (201)
    on left: 234, on right: 235
set_property_with_this (202)
    on left: 238 239, on right: 235 238
$@73 (203)
    on left: 237, on right: 238
class_function_declarartion (204)
    on left: 242, on right: 222
$@74 (205)
    on left: 240, on right: 242
$@75 (206)
    on left: 241, on right: 242


State 0

    0 $accept: . program $end

    VAR          shift, and go to state 1
    CONST        shift, and go to state 2
    CLASS        shift, and go to state 3
    CONSOLE_LOG  shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    DO           shift, and go to state 7
    TRY          shift, and go to state 8
    SWITCH       shift, and go to state 9
    THROW        shift, and go to state 10
    RETURN       shift, and go to state 11
    THIS         shift, and go to state 12
    FUNCTION     shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    LET          shift, and go to state 15

    $default  reduce using rule 132 (commands)

    program                       go to state 16
    declaration                   go to state 17
    variable_types                go to state 18
    console_log_declarations      go to state 19
    console_log_left_common       go to state 20
    instance_new_class            go to state 21
    increment_decrement_variable  go to state 22
    set_value_on_class            go to state 23
    commands                      go to state 24
    command                       go to state 25
    if_declaration                go to state 26
    try_finally_declaration       go to state 27
    function_declarartion         go to state 28
    call_a_function               go to state 29
    class_declarations            go to state 30


State 1

   13 variable_types: VAR .

    $default  reduce using rule 13 (variable_types)


State 2

   14 variable_types: CONST .
   37 instance_new_class: CONST . IDENTIFIER ASSIGN NEW ERROR_LITERAL LPARENTHESES $@4 function_values RPARENTHESES SEMICOLON

    IDENTIFIER  shift, and go to state 31

    IDENTIFIER  [reduce using rule 14 (variable_types)]


State 3

  220 class_declarations: CLASS . ERROR_LITERAL LBRACE $@68 class_attributes constructor_definition class_attributes RBRACE

    ERROR_LITERAL  shift, and go to state 32


State 4

   18 console_log_left_common: CONSOLE_LOG . LPARENTHESES

    LPARENTHESES  shift, and go to state 33


State 5

  154 if_declaration: IF . LPARENTHESES $@42 expressions RPARENTHESES LBRACE $@43 commands RBRACE $@44 else_declaration

    LPARENTHESES  shift, and go to state 34


State 6

  136 command: WHILE . LPARENTHESES $@34 expressions RPARENTHESES LBRACE $@35 commands RBRACE

    LPARENTHESES  shift, and go to state 35


State 7

  139 command: DO . LBRACE $@36 commands RBRACE WHILE LPARENTHESES $@37 expressions RPARENTHESES SEMICOLON

    LBRACE  shift, and go to state 36


State 8

  161 try_finally_declaration: TRY . LBRACE $@46 commands RBRACE $@47 catch_declararation FINALLY LBRACE $@48 commands RBRACE

    LBRACE  shift, and go to state 37


State 9

  145 command: SWITCH . LPARENTHESES $@39 expressions RPARENTHESES LBRACE $@40 cases_of_switch_case default_case_of_switch_case RBRACE

    LPARENTHESES  shift, and go to state 38


State 10

  141 command: THROW . NEW ERROR_LITERAL LPARENTHESES $@38 expressions RPARENTHESES SEMICOLON

    NEW  shift, and go to state 39


State 11

  149 command: RETURN . $@41 expressions SEMICOLON

    $default  reduce using rule 148 ($@41)

    $@41  go to state 40


State 12

  129 set_value_on_class: THIS . DOT IDENTIFIER ASSIGN IDENTIFIER SEMICOLON

    DOT  shift, and go to state 41


State 13

  208 function_declarartion: FUNCTION . IDENTIFIER LPARENTHESES function_parameters RPARENTHESES COLON all_possible_variables_types LBRACE commands RBRACE

    IDENTIFIER  shift, and go to state 42


State 14

   97 increment_decrement_variable: IDENTIFIER . ADD ADD SEMICOLON
   98                             | IDENTIFIER . MINUS MINUS SEMICOLON
  209 call_a_function: IDENTIFIER . LPARENTHESES all_possible_variables RPARENTHESES SEMICOLON
  210                | IDENTIFIER . LPARENTHESES all_possible_variables COMMA function_values RPARENTHESES SEMICOLON

    LPARENTHESES  shift, and go to state 43
    ADD           shift, and go to state 44
    MINUS         shift, and go to state 45


State 15

   12 variable_types: LET .

    $default  reduce using rule 12 (variable_types)


State 16

    0 $accept: program . $end

    $end  shift, and go to state 46


State 17

  131 commands: declaration . commands

    VAR          shift, and go to state 1
    CONST        shift, and go to state 2
    CLASS        shift, and go to state 3
    CONSOLE_LOG  shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    DO           shift, and go to state 7
    TRY          shift, and go to state 8
    SWITCH       shift, and go to state 9
    THROW        shift, and go to state 10
    RETURN       shift, and go to state 11
    THIS         shift, and go to state 12
    FUNCTION     shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    LET          shift, and go to state 15

    $default  reduce using rule 132 (commands)

    declaration                   go to state 17
    variable_types                go to state 18
    console_log_declarations      go to state 19
    console_log_left_common       go to state 20
    instance_new_class            go to state 21
    increment_decrement_variable  go to state 22
    set_value_on_class            go to state 23
    commands                      go to state 47
    command                       go to state 25
    if_declaration                go to state 26
    try_finally_declaration       go to state 27
    function_declarartion         go to state 28
    call_a_function               go to state 29
    class_declarations            go to state 30


State 18

    3 declaration: variable_types . IDENTIFIER $@1 COLON possible_declarations

    IDENTIFIER  shift, and go to state 48


State 19

    4 declaration: console_log_declarations .

    $default  reduce using rule 4 (declaration)


State 20

   16 console_log_declarations: console_log_left_common . STRING_LITERAL $@2 console_log_declaration_with_add console_log_right_common
   17                         | console_log_left_common . access_object console_log_declaration_with_add console_log_right_common

    IDENTIFIER      shift, and go to state 49
    STRING_LITERAL  shift, and go to state 50

    access_object             go to state 51
    access_object_on_bracket  go to state 52


State 21

    7 declaration: instance_new_class .

    $default  reduce using rule 7 (declaration)


State 22

    5 declaration: increment_decrement_variable .

    $default  reduce using rule 5 (declaration)


State 23

    6 declaration: set_value_on_class .

    $default  reduce using rule 6 (declaration)


State 24

    1 program: commands .

    $default  reduce using rule 1 (program)


State 25

  130 commands: command . commands

    VAR          shift, and go to state 1
    CONST        shift, and go to state 2
    CLASS        shift, and go to state 3
    CONSOLE_LOG  shift, and go to state 4
    IF           shift, and go to state 5
    WHILE        shift, and go to state 6
    DO           shift, and go to state 7
    TRY          shift, and go to state 8
    SWITCH       shift, and go to state 9
    THROW        shift, and go to state 10
    RETURN       shift, and go to state 11
    THIS         shift, and go to state 12
    FUNCTION     shift, and go to state 13
    IDENTIFIER   shift, and go to state 14
    LET          shift, and go to state 15

    $default  reduce using rule 132 (commands)

    declaration                   go to state 17
    variable_types                go to state 18
    console_log_declarations      go to state 19
    console_log_left_common       go to state 20
    instance_new_class            go to state 21
    increment_decrement_variable  go to state 22
    set_value_on_class            go to state 23
    commands                      go to state 53
    command                       go to state 25
    if_declaration                go to state 26
    try_finally_declaration       go to state 27
    function_declarartion         go to state 28
    call_a_function               go to state 29
    class_declarations            go to state 30


State 26

  133 command: if_declaration .

    $default  reduce using rule 133 (command)


State 27

  142 command: try_finally_declaration .

    $default  reduce using rule 142 (command)


State 28

  146 command: function_declarartion .

    $default  reduce using rule 146 (command)


State 29

  147 command: call_a_function .

    $default  reduce using rule 147 (command)


State 30

  150 command: class_declarations .

    $default  reduce using rule 150 (command)


State 31

   37 instance_new_class: CONST IDENTIFIER . ASSIGN NEW ERROR_LITERAL LPARENTHESES $@4 function_values RPARENTHESES SEMICOLON

    ASSIGN  shift, and go to state 54


State 32

  220 class_declarations: CLASS ERROR_LITERAL . LBRACE $@68 class_attributes constructor_definition class_attributes RBRACE

    LBRACE  shift, and go to state 55


State 33

   18 console_log_left_common: CONSOLE_LOG LPARENTHESES .

    $default  reduce using rule 18 (console_log_left_common)


State 34

  154 if_declaration: IF LPARENTHESES . $@42 expressions RPARENTHESES LBRACE $@43 commands RBRACE $@44 else_declaration

    $default  reduce using rule 151 ($@42)

    $@42  go to state 56


State 35

  136 command: WHILE LPARENTHESES . $@34 expressions RPARENTHESES LBRACE $@35 commands RBRACE

    $default  reduce using rule 134 ($@34)

    $@34  go to state 57


State 36

  139 command: DO LBRACE . $@36 commands RBRACE WHILE LPARENTHESES $@37 expressions RPARENTHESES SEMICOLON

    $default  reduce using rule 137 ($@36)

    $@36  go to state 58


State 37
